// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase XI — fixture baseline snapshots (P1) > mini-angular-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:src/app/home.component.ts:HomeComponent:component:src/app/users.component.ts:UsersComponent",
    "renders:component:src/app/home.component.ts:HomeComponent:component:src/app/users.component.ts:UsersComponent",
  ],
  "edgesByKind": {
    "imports": 1,
    "renders": 1,
  },
  "nodeIds": [
    "component:src/app/about.component.ts:AboutComponent",
    "component:src/app/alt-home.component.ts:HomeComponent",
    "component:src/app/home.component.ts:HomeComponent",
    "component:src/app/user-detail/user-detail.component.ts:UserDetailComponent",
    "component:src/app/users.component.ts:UsersComponent",
    "route:src/app/app.config.ts:/",
    "route:src/app/app.config.ts:/about",
    "route:src/app/app.config.ts:/users",
    "route:src/app/app.config.ts:/users/:id",
    "route:src/app/user-detail/user-detail.module.ts:/",
  ],
  "nodesByKind": {
    "component": 5,
    "route": 5,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-angular-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_app_app_config_ts__["/ · CSR"]:::csr
  route_src_app_user_detail_user_detail_module_ts__["/ · CSR"]:::csr
  subgraph ABOUT_G["👤 /about"]
    route_src_app_app_config_ts__about["/about · CSR"]:::csr
  end
  subgraph USERS_G["📄 /users"]
    route_src_app_app_config_ts__users["/users · CSR"]:::csr
    route_src_app_app_config_ts__users__id[":id · CSR"]:::csr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-angular-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_app_user_detail_user_detail_module_ts__["/ · CSR"]:::csr
  subgraph ABOUT_S["👤 /about"]
    route_src_app_app_config_ts__about["/about · CSR"]:::csr
  end
  subgraph USERS_S["📄 /users"]
    route_src_app_app_config_ts__users["/users · CSR"]:::csr
    route_src_app_app_config_ts__users__id[":id · CSR"]:::csr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-angular-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-django-app > IRGraph summary 1`] = `
{
  "edgeIds": [],
  "edgesByKind": {},
  "nodeIds": [
    "component:api/views.py:PostDetailView",
    "component:api/views.py:PostListView",
    "component:api/views.py:UserDetailView",
    "component:api/views.py:UserListView",
    "route:api/urls.py:/api/posts/:slug:include",
    "route:api/urls.py:/api/posts:include",
    "route:api/urls.py:/api/users/:pk:include",
    "route:api/urls.py:/api/users:include",
    "table:api/models.py:posts",
    "table:api/models.py:users",
    "table:db/migrations/V1__init.sql:flyway_items",
  ],
  "nodesByKind": {
    "component": 4,
    "route": 4,
    "table": 3,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-django-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_G["⚡ /api"]
    subgraph API_USERS_G["📄 /users"]
      route_api_urls_py__api_users_include["/api/users · SSR"]:::ssr
      route_api_urls_py__api_users__pk_include[":pk · SSR"]:::ssr
    end
    subgraph API_POSTS_G["📄 /posts"]
      route_api_urls_py__api_posts_include["/api/posts · SSR"]:::ssr
      route_api_urls_py__api_posts__slug_include[":slug · SSR"]:::ssr
    end
  end
  subgraph DATALAYER["🔌 API LAYER"]
    subgraph API_G["⚡ REST API · Backend"]
      API_SVC[("Backend Service")]
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-django-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_USERS_S["📄 /users"]
    route_api_urls_py__api_users_include["/api/users · SSR"]:::ssr
    route_api_urls_py__api_users__pk_include[":pk · SSR"]:::ssr
  end
  subgraph API_POSTS_S["📄 /posts"]
    route_api_urls_py__api_posts_include["/api/posts · SSR"]:::ssr
    route_api_urls_py__api_posts__slug_include[":slug · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-django-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram
%% table:users path:api/models.py
%% table:posts path:api/models.py
%% table:flyway_items path:db/migrations/V1__init.sql
  users {
    CharField name
    EmailField email
    BooleanField active
    DateTimeField created_at
  }
  posts {
    CharField title
    TextField body
    ForeignKey_User author FK
    DateTimeField created_at
  }
  flyway_items {
    integer id PK
    varchar name
    decimal price
  }"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-fastapi-app > IRGraph summary 1`] = `
{
  "edgeIds": [],
  "edgesByKind": {},
  "nodeIds": [
    "component:routers/posts.py:get_post",
    "component:routers/posts.py:list_posts",
    "component:routers/users.py:create_user",
    "component:routers/users.py:get_user",
    "component:routers/users.py:list_users",
    "component:schemas.py:PostSchema",
    "component:schemas.py:UserCreateSchema",
    "component:schemas.py:UserSchema",
    "route:main.py:/:get",
    "route:main.py:/health:get",
    "route:routers/posts.py:/api/posts/:post_id:GET",
    "route:routers/posts.py:/api/posts:GET",
    "route:routers/users.py:/api/users/:user_id:GET",
    "route:routers/users.py:/api/users:GET",
    "route:routers/users.py:/api/users:POST",
    "table:models.py:Post",
    "table:models.py:User",
  ],
  "nodesByKind": {
    "component": 8,
    "route": 7,
    "table": 2,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-fastapi-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_G["⚡ /api"]
    subgraph API_USERS_G["📄 /users"]
      route_routers_users_py__api_users_GET["GET /api/users · SSR"]:::ssr
      route_routers_users_py__api_users__user_id_GET["GET :user_id · SSR"]:::ssr
      route_routers_users_py__api_users_POST["POST /api/users · SSR"]:::ssr
    end
    subgraph API_POSTS_G["📄 /posts"]
      route_routers_posts_py__api_posts_GET["GET /api/posts · SSR"]:::ssr
      route_routers_posts_py__api_posts__post_id_GET["GET :post_id · SSR"]:::ssr
    end
  end
  route_main_py___get["GET / · SSR"]:::ssr
  subgraph HEALTH_G["📄 /health"]
    route_main_py__health_get["GET /health · SSR"]:::ssr
  end
  subgraph DATALAYER["🔌 API LAYER"]
    subgraph API_G["⚡ REST API · Backend"]
      API_SVC[("Backend Service")]
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-fastapi-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_S["⚡ /api"]
    subgraph API_USERS_S["📄 /users"]
      route_routers_users_py__api_users_GET["/api/users · SSR"]:::ssr
      route_routers_users_py__api_users__user_id_GET[":user_id · SSR"]:::ssr
    end
    subgraph API_POSTS_S["📄 /posts"]
      route_routers_posts_py__api_posts_GET["/api/posts · SSR"]:::ssr
      route_routers_posts_py__api_posts__post_id_GET[":post_id · SSR"]:::ssr
    end
  end
  route_main_py___get["/ · SSR"]:::ssr
  subgraph HEALTH_S["📄 /health"]
    route_main_py__health_get["/health · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-fastapi-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram
%% table:users path:models.py
%% table:posts path:models.py
  users {
    Integer id PK
    String name
    String email
    Boolean active
  }
  posts {
    Integer id PK
    String title
    Integer author_id
  }"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-flask-app > IRGraph summary 1`] = `
{
  "edgeIds": [],
  "edgesByKind": {},
  "nodeIds": [
    "route:app.py:/",
    "route:app.py:/health",
    "route:blueprints/posts.py:/api/posts",
    "route:blueprints/posts.py:/api/posts/:post_id",
    "route:blueprints/users.py:/api/users",
    "route:blueprints/users.py:/api/users",
    "route:blueprints/users.py:/api/users/:user_id",
  ],
  "nodesByKind": {
    "route": 7,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-flask-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_app_py__["/ · SSR"]:::ssr
  subgraph HEALTH_G["📄 /health"]
    route_app_py__health["/health · SSR"]:::ssr
  end
  subgraph API_G["⚡ /api"]
    subgraph API_POSTS_G["📄 /posts"]
      route_blueprints_posts_py__api_posts["/api/posts · SSR"]:::ssr
      route_blueprints_posts_py__api_posts__post_id[":post_id · SSR"]:::ssr
    end
    subgraph API_USERS_G["📄 /users"]
      route_blueprints_users_py__api_users["/api/users · SSR"]:::ssr
      route_blueprints_users_py__api_users__user_id[":user_id · SSR"]:::ssr
      route_blueprints_users_py__api_users["POST /api/users · SSR"]:::ssr
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-flask-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_app_py__["/ · SSR"]:::ssr
  subgraph HEALTH_S["📄 /health"]
    route_app_py__health["/health · SSR"]:::ssr
  end
  subgraph API_S["⚡ /api"]
    subgraph API_POSTS_S["📄 /posts"]
      route_blueprints_posts_py__api_posts["/api/posts · SSR"]:::ssr
      route_blueprints_posts_py__api_posts__post_id[":post_id · SSR"]:::ssr
    end
    subgraph API_USERS_S["📄 /users"]
      route_blueprints_users_py__api_users["/api/users · SSR"]:::ssr
      route_blueprints_users_py__api_users__user_id[":user_id · SSR"]:::ssr
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-flask-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nest-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:src/app.module.ts:AppModule:component:src/users/users.module.ts:UsersModule",
    "imports:component:src/users/users.module.ts:UsersModule:component:src/users/users.controller.ts:UsersController",
    "imports:component:src/users/users.module.ts:UsersModule:component:src/users/users.service.ts:UsersService",
    "queries:component:src/users/users.controller.ts:UsersController:table:src/user.entity.ts:users",
    "queries:component:src/users/users.module.ts:UsersModule:table:src/user.entity.ts:users",
    "queries:component:src/users/users.service.ts:UsersService:table:src/user.entity.ts:users",
    "queries:route:src/users/users.controller.ts:UsersController.create:table:src/user.entity.ts:users",
    "queries:route:src/users/users.controller.ts:UsersController.findAll:table:src/user.entity.ts:users",
    "queries:route:src/users/users.controller.ts:UsersController.findOne:table:src/user.entity.ts:users",
    "queries:route:src/users/users.controller.ts:UsersController.remove:table:src/user.entity.ts:users",
  ],
  "edgesByKind": {
    "imports": 3,
    "queries": 7,
  },
  "nodeIds": [
    "component:src/app.module.ts:AppModule",
    "component:src/users/users.controller.ts:UsersController",
    "component:src/users/users.module.ts:UsersModule",
    "component:src/users/users.service.ts:UsersService",
    "route:src/users/users.controller.ts:UsersController.create",
    "route:src/users/users.controller.ts:UsersController.findAll",
    "route:src/users/users.controller.ts:UsersController.findOne",
    "route:src/users/users.controller.ts:UsersController.remove",
    "table:src/user.entity.ts:users",
  ],
  "nodesByKind": {
    "component": 4,
    "route": 4,
    "table": 1,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nest-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph USERS_G["📄 /users"]
    route_src_users_users_controller_ts_UsersController_findAll["GET /users · SSR"]:::ssr
    route_src_users_users_controller_ts_UsersController_create["POST /users · SSR"]:::ssr
    subgraph USERS__ID_G["📄 /:id"]
      route_src_users_users_controller_ts_UsersController_findOne["GET /users/:id · SSR"]:::ssr
      route_src_users_users_controller_ts_UsersController_remove["DELETE /users/:id · SSR"]:::ssr
    end
  end
  subgraph DATALAYER["🔌 API LAYER"]
    subgraph API_G["⚡ REST API · Backend"]
      API_SVC[("Backend Service")]
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nest-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph USERS_S["📄 /users"]
    route_src_users_users_controller_ts_UsersController_create["/users · SSR"]:::ssr
    route_src_users_users_controller_ts_UsersController_remove[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nest-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram
%% table:users path:src/user.entity.ts
  users {
    uuid id PK
    string name
    varchar email
    boolean active
  }
  users {
    string name
  }
  users__id {
    string name
  }
  UsersController {
    string name
  }
  UsersModule {
    string name
  }
  UsersService {
    string name
  }
  users }|--|| users : "queries"
  users__id }|--|| users : "queries"
  users }|--|| users : "queries"
  users__id }|--|| users : "queries"
  UsersController }|--|| users : "queries"
  UsersModule }|--|| users : "queries"
  UsersService }|--|| users : "queries""
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-next-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:app/layout.tsx:layout:component:components/Header.tsx:Header",
    "imports:component:app/page.tsx:page:component:components/Header.tsx:Header",
    "queries:component:components/PostList.tsx:PostList:table:types/supabase.ts:posts",
    "renders:route:app/(marketing)/about:page:component:app/(marketing)/about/page.tsx:page",
    "renders:route:app/blog/[slug]:page:component:app/blog/[slug]/page.tsx:page",
    "renders:route:app:page:component:app/page.tsx:page",
    "renders:route:app:page:component:components/Header.tsx:Header",
  ],
  "edgesByKind": {
    "imports": 2,
    "queries": 1,
    "renders": 4,
  },
  "nodeIds": [
    "component:app/(marketing)/about/page.tsx:page",
    "component:app/blog/[slug]/page.tsx:page",
    "component:app/layout.tsx:layout",
    "component:app/page.tsx:page",
    "component:components/Header.tsx:Header",
    "component:components/PostList.tsx:PostList",
    "route:app/(marketing)/about:page",
    "route:app/api/posts:route-handler:GET",
    "route:app/blog/[slug]:page",
    "route:app:layout",
    "route:app:page",
    "table:types/supabase.ts:posts",
    "table:types/supabase.ts:profiles",
  ],
  "nodesByKind": {
    "component": 6,
    "route": 5,
    "table": 2,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-next-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph INFRA["☁ VERCEL · Edge Network"]
    subgraph RUNTIME["⚙ Node.js · Server Runtime"]
      subgraph FRAMEWORK["▲ Next.js · App Router"]
        subgraph REACT["⚛ React · SSR Engine"]
          SSR_FETCH["(SSR data fetch)"]:::unk
          subgraph ABOUT_G["👤 /about"]
            route_app__marketing__about_page["/about · SSR"]:::ssr
          end
          subgraph BLOG_G["📝 /blog"]
            route_app_blog__slug__page[":slug · SSR"]:::ssr
          end
          route_app_page["/ · SSR"]:::ssr
        end
      end
    end
  end
  subgraph DATALAYER["🗄 DATA LAYER"]
    subgraph SUPABASE_G["⚡ Supabase · BaaS"]
      PG_SB[("PostgreSQL")]
      SB_AUTH["Auth · OAuth"]
    end
  end
  SSR_FETCH -.->|"supabase-js"| PG_SB"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-next-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph ABOUT_S["👤 /about"]
    route_app__marketing__about_page["/about · SSR"]:::ssr
    subgraph ABOUT_S_C
      component_app__marketing__about_page_tsx_page["page"]
    end
  end
  subgraph BLOG_S["📝 /blog"]
    route_app_blog__slug__page[":slug · SSR"]:::ssr
    subgraph BLOG_S_C
      component_app_blog__slug__page_tsx_page["page"]
    end
  end
  route_app_page["/ · SSR"]:::ssr
  route_app__marketing__about_page --> component_app__marketing__about_page_tsx_page
  route_app_blog__slug__page --> component_app_blog__slug__page_tsx_page
  component_app_page_tsx_page --> component_components_Header_tsx_Header"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-next-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram
%% table:posts path:types/supabase.ts
%% table:profiles path:types/supabase.ts
  posts {
    text id PK
    text title
    text content
    text author_id FK
    text created_at
  }
  profiles {
    text id PK
    text username
    text avatar_url
  }
  PostList {
    string name
  }
  posts }o--|| profiles : "author_id"
  PostList }|--|| posts : "queries""
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nextpages-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "renders:component:pages/about.tsx:about:component:pages/_components/UserBadge.tsx:UserBadge",
    "renders:component:pages/index.tsx:index:component:pages/_components/UserCard.tsx:UserCard",
  ],
  "edgesByKind": {
    "renders": 2,
  },
  "nodeIds": [
    "component:pages/_components/UserBadge.tsx:UserBadge",
    "component:pages/_components/UserCard.tsx:UserCard",
    "component:pages/about.tsx:about",
    "component:pages/index.tsx:index",
    "component:pages/users/[id].tsx:[id]",
    "route:pages/_components/UserBadge.tsx:page",
    "route:pages/_components/UserCard.tsx:page",
    "route:pages/about.tsx:page",
    "route:pages/index.tsx:page",
    "route:pages/users/[id].tsx:page",
  ],
  "nodesByKind": {
    "component": 5,
    "route": 5,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nextpages-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph INFRA["☁ VERCEL · Edge Network"]
    subgraph RUNTIME["⚙ Node.js · Server Runtime"]
      subgraph FRAMEWORK["▲ Next.js · App Router"]
        subgraph REACT["⚛ React · SSR Engine"]
          subgraph _COMPONENTS_G["📄 /_components"]
            route_pages__components_UserBadge_tsx_page["UserBadge · SSR"]:::ssr
            route_pages__components_UserCard_tsx_page["UserCard · SSR"]:::ssr
          end
          subgraph ABOUT_G["👤 /about"]
            route_pages_about_tsx_page["/about · SSR"]:::ssr
          end
          route_pages_index_tsx_page["/ · SSR"]:::ssr
          subgraph USERS_G["📄 /users"]
            route_pages_users__id__tsx_page[":id · SSR"]:::ssr
          end
        end
      end
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nextpages-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph _COMPONENTS_S["📄 /_components"]
    route_pages__components_UserBadge_tsx_page["UserBadge · SSR"]:::ssr
    route_pages__components_UserCard_tsx_page["UserCard · SSR"]:::ssr
  end
  subgraph ABOUT_S["👤 /about"]
    route_pages_about_tsx_page["/about · SSR"]:::ssr
  end
  route_pages_index_tsx_page["/ · SSR"]:::ssr
  subgraph USERS_S["📄 /users"]
    route_pages_users__id__tsx_page[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nextpages-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nuxt-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:pages/about.vue:about:component:components/UserCard.vue:UserCard",
  ],
  "edgesByKind": {
    "imports": 1,
  },
  "nodeIds": [
    "component:components/UserCard.vue:UserCard",
    "component:pages/about.vue:about",
    "component:pages/client-only.vue:client-only",
    "component:pages/index.vue:index",
    "component:pages/users/[id].vue:[id]",
    "route:pages/users:[id].vue",
    "route:pages:about.vue",
    "route:pages:client-only.vue",
    "route:pages:index.vue",
  ],
  "nodesByKind": {
    "component": 5,
    "route": 4,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nuxt-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph ABOUT_G["👤 /about"]
    route_pages_about_vue["/about · SSR"]:::ssr
  end
  subgraph CLIENT_ONLY_G["📄 /client-only"]
    route_pages_client_only_vue["/client-only · CSR"]:::csr
  end
  route_pages_index_vue["/ · SSR"]:::ssr
  subgraph USERS_G["📄 /users"]
    route_pages_users__id__vue[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nuxt-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph ABOUT_S["👤 /about"]
    route_pages_about_vue["/about · SSR"]:::ssr
  end
  subgraph CLIENT_ONLY_S["📄 /client-only"]
    route_pages_client_only_vue["/client-only · CSR"]:::csr
  end
  route_pages_index_vue["/ · SSR"]:::ssr
  subgraph USERS_S["📄 /users"]
    route_pages_users__id__vue[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-nuxt-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-react-router-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "renders:component:src/pages/UserListPage.tsx:UserListPage:component:src/components/UserCard.tsx:UserCard",
    "renders:route:src/router.tsx:/:component:src/pages/HomePage.tsx:HomePage",
    "renders:route:src/router.tsx:/about:component:src/pages/AboutPage.tsx:AboutPage",
    "renders:route:src/router.tsx:/users/:id:component:src/pages/UserDetailPage.tsx:UserDetailPage",
    "renders:route:src/router.tsx:/users:component:src/pages/UserListPage.tsx:UserListPage",
  ],
  "edgesByKind": {
    "renders": 5,
  },
  "nodeIds": [
    "component:src/components/UserCard.tsx:UserCard",
    "component:src/pages/AboutPage.tsx:AboutPage",
    "component:src/pages/HomePage.tsx:HomePage",
    "component:src/pages/UserDetailPage.tsx:UserDetailPage",
    "component:src/pages/UserListPage.tsx:UserListPage",
    "route:src/router.tsx:/",
    "route:src/router.tsx:/about",
    "route:src/router.tsx:/users",
    "route:src/router.tsx:/users/:id",
  ],
  "nodesByKind": {
    "component": 5,
    "route": 4,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-react-router-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_router_tsx__["/ · CSR"]:::csr
  subgraph ABOUT_G["👤 /about"]
    route_src_router_tsx__about["/about · CSR"]:::csr
  end
  subgraph USERS_G["📄 /users"]
    route_src_router_tsx__users["/users · CSR"]:::csr
    route_src_router_tsx__users__id[":id · CSR"]:::csr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-react-router-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_router_tsx__["/ · CSR"]:::csr
  subgraph ABOUT_S["👤 /about"]
    route_src_router_tsx__about["/about · CSR"]:::csr
    subgraph ABOUT_S_C
      component_src_pages_AboutPage_tsx_AboutPage["AboutPage [CSR]"]
    end
  end
  subgraph USERS_S["📄 /users"]
    route_src_router_tsx__users["/users · CSR"]:::csr
    route_src_router_tsx__users__id[":id · CSR"]:::csr
    subgraph USERS_S_C
      component_src_pages_UserListPage_tsx_UserListPage["UserListPage [CSR]"]
      component_src_pages_UserDetailPage_tsx_UserDetailPage["UserDetailPage [CSR]"]
    end
  end
  route_src_router_tsx__about --> component_src_pages_AboutPage_tsx_AboutPage
  route_src_router_tsx__users --> component_src_pages_UserListPage_tsx_UserListPage
  route_src_router_tsx__users__id --> component_src_pages_UserDetailPage_tsx_UserDetailPage"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-react-router-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-remix-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "renders:component:app/routes/_index.tsx:_index:component:app/routes/about.tsx:about",
  ],
  "edgesByKind": {
    "renders": 1,
  },
  "nodeIds": [
    "component:app/routes/_index.tsx:_index",
    "component:app/routes/about.tsx:about",
    "component:app/routes/users.$id.tsx:users.$id",
    "route:app/routes/_index.tsx:page",
    "route:app/routes/about.tsx:page",
    "route:app/routes/users.$id.tsx:page",
  ],
  "nodesByKind": {
    "component": 3,
    "route": 3,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-remix-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_app_routes__index_tsx_page["/ · SSR"]:::ssr
  subgraph ABOUT_G["👤 /about"]
    route_app_routes_about_tsx_page["/about · SSR"]:::ssr
  end
  subgraph USERS_G["📄 /users"]
    route_app_routes_users__id_tsx_page[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-remix-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_app_routes__index_tsx_page["/ · SSR"]:::ssr
  subgraph ABOUT_S["👤 /about"]
    route_app_routes_about_tsx_page["/about · SSR"]:::ssr
  end
  subgraph USERS_S["📄 /users"]
    route_app_routes_users__id_tsx_page[":id · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-remix-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-spring-app > IRGraph summary 1`] = `
{
  "edgeIds": [],
  "edgesByKind": {},
  "nodeIds": [
    "component:src/main/java/com/example/controller/PostController.java:PostController",
    "component:src/main/java/com/example/controller/UserController.java:UserController",
    "component:src/main/java/com/example/service/UserService.java:UserService",
    "route:src/main/java/com/example/controller/PostController.java:/api/posts/:postId:GetMapping",
    "route:src/main/java/com/example/controller/PostController.java:/api/posts/featured:GetMapping",
    "route:src/main/java/com/example/controller/PostController.java:/api/posts/pinned:GetMapping",
    "route:src/main/java/com/example/controller/PostController.java:/api/posts:GetMapping",
    "route:src/main/java/com/example/controller/UserController.java:/api/users/:userId:DeleteMapping",
    "route:src/main/java/com/example/controller/UserController.java:/api/users/:userId:GetMapping",
    "route:src/main/java/com/example/controller/UserController.java:/api/users:GetMapping",
    "route:src/main/java/com/example/controller/UserController.java:/api/users:PostMapping",
    "table:src/main/java/com/example/entity/User.java:users",
    "table:src/main/resources/db/migration/V1__init.sql:flyway_posts",
    "table:src/main/resources/db/migration/V1__init.sql:flyway_users",
  ],
  "nodesByKind": {
    "component": 3,
    "route": 8,
    "table": 3,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-spring-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_G["⚡ /api"]
    subgraph API_POSTS_G["📄 /posts"]
      route_src_main_java_com_example_controller_PostController_java__api_posts_GetMapping["GET /api/posts · SSR"]:::ssr
      subgraph API_POSTS__POSTID_G["📄 /:postId"]
        route_src_main_java_com_example_controller_PostController_java__api_posts__postId_GetMapping["GET /api/posts/:postId · SSR"]:::ssr
      end
      subgraph API_POSTS_FEATURED_G["📄 /featured"]
        route_src_main_java_com_example_controller_PostController_java__api_posts_featured_GetMapping["GET /api/posts/featured · SSR"]:::ssr
      end
      subgraph API_POSTS_PINNED_G["📄 /pinned"]
        route_src_main_java_com_example_controller_PostController_java__api_posts_pinned_GetMapping["GET /api/posts/pinned · SSR"]:::ssr
      end
    end
    subgraph API_USERS_G["📄 /users"]
      route_src_main_java_com_example_controller_UserController_java__api_users_GetMapping["GET /api/users · SSR"]:::ssr
      route_src_main_java_com_example_controller_UserController_java__api_users_PostMapping["POST /api/users · SSR"]:::ssr
      subgraph API_USERS__USERID_G["📄 /:userId"]
        route_src_main_java_com_example_controller_UserController_java__api_users__userId_GetMapping["GET /api/users/:userId · SSR"]:::ssr
        route_src_main_java_com_example_controller_UserController_java__api_users__userId_DeleteMapping["DELETE /api/users/:userId · SSR"]:::ssr
      end
    end
  end
  subgraph DATALAYER["🔌 API LAYER"]
    subgraph API_G["⚡ REST API · Backend"]
      API_SVC[("Backend Service")]
    end
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-spring-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  subgraph API_POSTS_S["📄 /posts"]
    route_src_main_java_com_example_controller_PostController_java__api_posts_GetMapping["/api/posts · SSR"]:::ssr
    subgraph API_POSTS__POSTID_S["📄 /:postId"]
      route_src_main_java_com_example_controller_PostController_java__api_posts__postId_GetMapping["/api/posts/:postId · SSR"]:::ssr
    end
    subgraph API_POSTS_FEATURED_S["📄 /featured"]
      route_src_main_java_com_example_controller_PostController_java__api_posts_featured_GetMapping["/api/posts/featured · SSR"]:::ssr
    end
    subgraph API_POSTS_PINNED_S["📄 /pinned"]
      route_src_main_java_com_example_controller_PostController_java__api_posts_pinned_GetMapping["/api/posts/pinned · SSR"]:::ssr
    end
  end
  subgraph API_USERS_S["📄 /users"]
    route_src_main_java_com_example_controller_UserController_java__api_users_PostMapping["/api/users · SSR"]:::ssr
    route_src_main_java_com_example_controller_UserController_java__api_users__userId_DeleteMapping[":userId · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-spring-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram
%% table:users path:src/main/java/com/example/entity/User.java
%% table:flyway_users path:src/main/resources/db/migration/V1__init.sql
%% table:flyway_posts path:src/main/resources/db/migration/V1__init.sql
  users {
    Long id PK
    String name
    String email
    Boolean active
  }
  flyway_users {
    bigint id PK
    varchar username
    timestamp created_at
  }
  flyway_posts {
    bigint id PK
    varchar title
    bigint user_id
  }"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-sveltekit-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:src/routes/+page.svelte:+page:component:src/lib/UserCard.svelte:UserCard",
  ],
  "edgesByKind": {
    "imports": 1,
  },
  "nodeIds": [
    "component:src/lib/UserCard.svelte:UserCard",
    "component:src/routes/+page.svelte:+page",
    "component:src/routes/about/+page.svelte:+page",
    "component:src/routes/blog/[slug]/+page.svelte:+page",
    "route:src/routes/about:page",
    "route:src/routes/blog/[slug]:page",
    "route:src/routes:page",
  ],
  "nodesByKind": {
    "component": 4,
    "route": 3,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-sveltekit-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_routes_page["/ · SSR"]:::ssr
  subgraph ABOUT_G["👤 /about"]
    route_src_routes_about_page["/about · SSR"]:::ssr
  end
  subgraph BLOG_G["📝 /blog"]
    route_src_routes_blog__slug__page[":slug · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-sveltekit-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_routes_page["/ · SSR"]:::ssr
  subgraph ABOUT_S["👤 /about"]
    route_src_routes_about_page["/about · SSR"]:::ssr
  end
  subgraph BLOG_S["📝 /blog"]
    route_src_routes_blog__slug__page[":slug · SSR"]:::ssr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-sveltekit-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-vue-spa-app > IRGraph summary 1`] = `
{
  "edgeIds": [
    "imports:component:src/views/Home.vue:Home:component:src/views/NavBar.vue:NavBar",
    "imports:component:src/views/Users.vue:Users:component:src/views/UserDetail.vue:UserDetail",
    "renders:component:src/views/Users.vue:Users:component:src/views/UserDetail.vue:UserDetail",
  ],
  "edgesByKind": {
    "imports": 2,
    "renders": 1,
  },
  "nodeIds": [
    "component:src/views/About.vue:About",
    "component:src/views/Home.vue:Home",
    "component:src/views/NavBar.vue:NavBar",
    "component:src/views/UserDetail.vue:UserDetail",
    "component:src/views/Users.vue:Users",
    "route:src/router/index.ts:/",
    "route:src/router/index.ts:/about",
    "route:src/router/index.ts:/users",
    "route:src/router/index.ts:/users/:id",
  ],
  "nodesByKind": {
    "component": 5,
    "route": 4,
  },
}
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-vue-spa-app > Tab1 rendering diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TD
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_router_index_ts__["/ · CSR"]:::csr
  subgraph ABOUT_G["👤 /about"]
    route_src_router_index_ts__about["/about · CSR"]:::csr
  end
  subgraph USERS_G["📄 /users"]
    route_src_router_index_ts__users["/users · CSR"]:::csr
    route_src_router_index_ts__users__id[":id · CSR"]:::csr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-vue-spa-app > Tab2 screen-component diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0c1a30','primaryTextColor':'#7dd3fc','primaryBorderColor':'#0e3a6e','edgeLabelBackground':'#0c1a30','lineColor':'#334155','secondaryColor':'#0f172a','clusterBkg':'#060c18','clusterBorder':'#1e3a5f','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
graph TB
  classDef ssr fill:#0d1a0d,stroke:#16a34a,color:#86efac
  classDef csr fill:#2d1200,stroke:#c2410c,color:#fb923c
  classDef ssg fill:#1a0d1a,stroke:#7c3aed,color:#c4b5fd
  classDef isr fill:#1a1a0d,stroke:#ca8a04,color:#fde047
  classDef ppr fill:#0d1a2d,stroke:#2563eb,color:#93c5fd
  classDef unk fill:#1a1a1a,stroke:#6b7280,color:#9ca3af
  route_src_router_index_ts__["/ · CSR"]:::csr
  subgraph ABOUT_S["👤 /about"]
    route_src_router_index_ts__about["/about · CSR"]:::csr
  end
  subgraph USERS_S["📄 /users"]
    route_src_router_index_ts__users["/users · CSR"]:::csr
    route_src_router_index_ts__users__id[":id · CSR"]:::csr
  end"
`;

exports[`Phase XI — fixture baseline snapshots (P1) > mini-vue-spa-app > Tab3 db-screen diagram 1`] = `
"%%{init:{'theme':'base','themeVariables':{'background':'#060810','primaryColor':'#0a2030','primaryTextColor':'#e2e8f0','primaryBorderColor':'#1e4060','lineColor':'#f59e0b','secondaryColor':'#0f172a','tertiaryColor':'#1a0a20','attributeBackgroundColorEven':'#ffffff','attributeBackgroundColorOdd':'#f1f5f9','nodeBorder':'#1e4060','clusterBkg':'#0a0e1a','fontFamily':'JetBrains Mono','fontSize':'14'}}}%%
erDiagram"
`;
